--- a/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
+++ b/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.41.1" />
+    <PackageReference Include="MinVer" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
