--- a/src/Airudit.MdBook/Airudit.MdBook.csproj
+++ b/src/Airudit.MdBook/Airudit.MdBook.csproj
@@ -12,4 +12,11 @@
     <ProjectReference Include="..\Airudit.MdBook.Core\Airudit.MdBook.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MinVer" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
