build: pack as tool

--- a/src/Airudit.MdBook/Airudit.MdBook.csproj
+++ b/src/Airudit.MdBook/Airudit.MdBook.csproj
@@ -8,12 +8,16 @@
     <AssemblyName>mdbook</AssemblyName>
     <EnablePackageValidation>true</EnablePackageValidation>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <Authors>Antoine Sottiau</Authors>
+    <Authors>SandRock</Authors>
     <Description>turns a collection a markdown files into a book</Description>
     <PackageProjectUrl>https://github.com/Airudit/mdbook/</PackageProjectUrl>
     <PackageTags>markdown commonmark</PackageTags>
     <PackageReleaseNotes>experimental release!</PackageReleaseNotes>
     <Company>Airudit</Company>
+    <PackageId>Airudit.MdBook</PackageId>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>mdbook</ToolCommandName>
+<!--    <PackageOutputPath>./nupkg</PackageOutputPath>-->
   </PropertyGroup>
 
   <ItemGroup>
