--- a/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
+++ b/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
@@ -6,12 +6,13 @@
     <Nullable>enable</Nullable>
     <EnablePackageValidation>true</EnablePackageValidation>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <Authors>Antoine Sottiau</Authors>
+    <Authors>SandRock</Authors>
     <Description>turns a collection a markdown files into a book</Description>
     <PackageProjectUrl>https://github.com/Airudit/mdbook/</PackageProjectUrl>
     <PackageTags>markdown commonmark</PackageTags>
     <PackageReleaseNotes>experimental release!</PackageReleaseNotes>
     <Company>Airudit</Company>
+    <PackageId>Airudit.MdBook.Core</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
