--- a/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
+++ b/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
@@ -13,6 +13,7 @@
     <PackageReleaseNotes>experimental release!</PackageReleaseNotes>
     <Company>Airudit</Company>
     <PackageId>Airudit.MdBook.Core</PackageId>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
   </PropertyGroup>
 
   <ItemGroup>
