--- a/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
+++ b/src/Airudit.MdBook.Core/Airudit.MdBook.Core.csproj
@@ -14,6 +14,8 @@
     <Company>Airudit</Company>
     <PackageId>Airudit.MdBook.Core</PackageId>
     <MinVerTagPrefix>v</MinVerTagPrefix>
+    <RepositoryUrl>git@github.com:Airudit/mdbook.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
